--- a/Home work1/index.html
+++ b/Home work1/index.html
@@ -45,16 +45,16 @@
       </section>
       <section>
         <h2>Our Team</h2>
-        <img src="./images/Mark Guerrero1.jpg" alt="photo Mark Guerrero" />
+        <img src="./images/Mark-Guerrero1.jpg" alt="photo Mark Guerrero" />
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
-        <img src="./images/Tom Ford2.jpg" alt="photo Tom Ford" />
+        <img src="./images/Tom-Ford2.jpg" alt="photo Tom Ford" />
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
-        <img src="./images/Camila Garcia3.jpg" alt="photo Camila Garcia " />
+        <img src="./images/Camila-Garcia3.jpg" alt="photo Camila Garcia " />
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
-        <img src="./images/Daniel Wilson4.jpg" alt="photo Daniel Wilson" />
+        <img src="./images/Daniel-Wilson4.jpg" alt="photo Daniel Wilson" />
         <h3>Daniel Wilson</h3>
         <p>UI Designer</p>
       </section>
