--- a/Home work1/index.html
+++ b/Home work1/index.html
@@ -19,7 +19,7 @@
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>
+        <button type="button">Order Service</button>
       </section>
       <section>
         <h3>Strategy</h3>
