--- a/index.html
+++ b/index.html
@@ -45,28 +45,16 @@
       </section>
       <section>
         <h2>Our Team</h2>
-        <img
-          src="./images/Mark-Guerrero1.jpg"
-          alt="photo Mark Guerrero"
-          width="264"
-        />
+        <img src="./images/Mark-Guerrero1.jpg" alt="photo Mark Guerrero" />
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
-        <img src="./images/Tom-Ford2.jpg" alt="photo Tom Ford" width="264" />
+        <img src="./images/Tom-Ford2.jpg" alt="photo Tom Ford" />
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
-        <img
-          src="./images/Camila-Garcia3.jpg"
-          alt="photo Camila Garcia "
-          width="264"
-        />
+        <img src="./images/Camila-Garcia3.jpg" alt="photo Camila Garcia " />
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
-        <img
-          src="./images/Daniel-Wilson4.jpg"
-          alt="photo Daniel Wilson"
-          width="264"
-        />
+        <img src="./images/Daniel-Wilson4.jpg" alt="photo Daniel Wilson" />
         <h3>Daniel Wilson</h3>
         <p>UI Designer</p>
       </section>
