--- a/Home work1/index.html
+++ b/Home work1/index.html
@@ -46,24 +46,28 @@
       <section>
         <h2>Our Team</h2>
         <img
-          src="../images/Mark-Guerrero1.jpg"
+          src="/goit-markup-hw-01/images/Mark-Guerrero1.jpg"
           alt="photo Mark Guerrero"
           width="264"
         />
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
-        <img src="../images/Tom-Ford2.jpg" alt="photo Tom Ford" width="264" />
+        <img
+          src="/goit-markup-hw-01/images/Tom-Ford2.jpg"
+          alt="photo Tom Ford"
+          width="264"
+        />
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
         <img
-          src="../images/Camila-Garcia3.jpg"
+          src="/goit-markup-hw-01/images/Camila-Garcia3.jpg"
           alt="photo Camila Garcia "
           width="264"
         />
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
         <img
-          src="../images/Daniel-Wilson4.jpg"
+          src="/goit-markup-hw-01/images/Daniel-Wilson4.jpg"
           alt="photo Daniel Wilson"
           width="264"
         />
