--- a/Home work1/index.html
+++ b/Home work1/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+
   <body>
     <header>
       <nav>
-        <a href="/"> <span>Web</span>Studio</a> <a href="/">Studio</a>
-        <a href="/">Portfolio</a> <a href="/">Contacts</a>
+        <a href="./index.html">WebStudio</a> <a href="">Studio</a>
+        <a href="">Portfolio</a> <a href="">Contacts</a>
       </nav>
       <address>
         <a href="mailto:info@devstudio.com">info@devstudio.com </a>
@@ -45,38 +46,48 @@
       </section>
       <section>
         <h2>Our Team</h2>
-        <img
-          src="/goit-markup-hw-01/images/Mark-Guerrero1.jpg"
-          alt="photo Mark Guerrero"
-          width="264"
-        />
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p>
-        <img
-          src="/goit-markup-hw-01/images/Tom-Ford2.jpg"
-          alt="photo Tom Ford"
-          width="264"
-        />
-        <h3>Tom Ford</h3>
-        <p>Frontend Developer</p>
-        <img
-          src="/goit-markup-hw-01/images/Camila-Garcia3.jpg"
-          alt="photo Camila Garcia "
-          width="264"
-        />
-        <h3>Camila Garcia</h3>
-        <p>Marketing</p>
-        <img
-          src="/goit-markup-hw-01/images/Daniel-Wilson4.jpg"
-          alt="photo Daniel Wilson"
-          width="264"
-        />
-        <h3>Daniel Wilson</h3>
-        <p>UI Designer</p>
+        <ul>
+          <li>
+            <img
+              src="/goit-markup-hw-01/images/Mark-Guerrero1.jpg"
+              alt="photo Mark Guerrero"
+              width="264"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="/goit-markup-hw-01/images/Tom-Ford2.jpg"
+              alt="photo Tom Ford"
+              width="264"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="/goit-markup-hw-01/images/Camila-Garcia3.jpg"
+              alt="photo Camila Garcia "
+              width="264"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="/goit-markup-hw-01/images/Daniel-Wilson4.jpg"
+              alt="photo Daniel Wilson"
+              width="264"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
-      <a href="/"><span>Web</span>Studio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
