--- a/Home work1/index.html
+++ b/Home work1/index.html
@@ -9,12 +9,18 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a> <a href="">Studio</a>
-        <a href="">Portfolio</a> <a href="">Contacts</a>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com </a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <ul>
+          <a href="mailto:info@devstudio.com">info@devstudio.com </a>
+          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </ul>
       </address>
     </header>
     <main>
