--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <a href="/">Portfolio</a> <a href="/">Contacts</a>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com </a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com </a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
       </address>
     </header>
     <main>
@@ -46,18 +48,28 @@
       </section>
       <section>
         <h2>Our Team</h2>
-        <img src="./images/Mark-Guerrero1.jpg" alt="photo Mark Guerrero" />
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p>
-        <img src="./images/Tom-Ford2.jpg" alt="photo Tom Ford" />
-        <h3>Tom Ford</h3>
-        <p>Frontend Developer</p>
-        <img src="./images/Camila-Garcia3.jpg" alt="photo Camila Garcia " />
-        <h3>Camila Garcia</h3>
-        <p>Marketing</p>
-        <img src="./images/Daniel-Wilson4.jpg" alt="photo Daniel Wilson" />
-        <h3>Daniel Wilson</h3>
-        <p>UI Designer</p>
+        <ul>
+          <li>
+            <img src="./images/Mark-Guerrero1.jpg" alt="photo Mark Guerrero" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/Tom-Ford2.jpg" alt="photo Tom Ford" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/Camila-Garcia3.jpg" alt="photo Camila Garcia " />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/Daniel-Wilson4.jpg" alt="photo Daniel Wilson" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
