--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
   <body>
     <header>
       <nav>
-        <a href="/"> <span>Web</span>Studio</a> <a href="/">Studio</a>
-        <a href="/">Portfolio</a> <a href="/">Contacts</a>
+        <a href="./index.html"> <span>Web</span>Studio</a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
       </nav>
       <address>
         <ul>
@@ -25,47 +29,74 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h3>Strategy</h3>
-        <p>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
-        <h3>Punctuality</h3>
-        <p>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-        <h3>Diligence</h3>
-        <p>
-          Research and confirm brands that present the strongest digital growth
-          opportunities and minimize risk.
-        </p>
-        <h3>Technologies</h3>
-        <p>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
+        <h2>Peculiarities</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/Mark-Guerrero1.jpg" alt="photo Mark Guerrero" />
+            <img
+              src="./images/Mark-Guerrero1.jpg"
+              alt="photo Mark Guerrero"
+              width="264"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/Tom-Ford2.jpg" alt="photo Tom Ford" />
+            <img
+              src="./images/Tom-Ford2.jpg"
+              alt="photo Tom Ford"
+              width="264"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/Camila-Garcia3.jpg" alt="photo Camila Garcia " />
+            <img
+              src="./images/Camila-Garcia3.jpg"
+              alt="photo Camila Garcia  "
+              width="264"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/Daniel-Wilson4.jpg" alt="photo Daniel Wilson" />
+            <img
+              src="./images/Daniel-Wilson4.jpg"
+              alt="photo Daniel Wilson"
+              width="264"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
