--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3>Diligence</h3>
             <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
             </p>
           </li>
           <li>
